agregadno color y foto

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-block d-lg-none">Juan Sebastian</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Juan Sebastian" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -41,11 +41,12 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Juan Sebastian
+                        <br>
                         <span class="text-primary">Salazar Garcia</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Puerta del Sol, (310) 416-8970 ·
-                        <a href="mailto:name@email.com">juansebas192@gmail.com</a>
+                        Puerta del Sol, Manizales, Caldas, Cel (310) 416-8970 ·
+                        <a href="mailto:juansebas192@gmail.com">juansebas192@gmail.com</a>
                     </div>
                     <p class="lead mb-5"> Tengo experience en el area de sistemas.</p>
                     <div class="social-icons">
