Finalizacion de hoja de vida

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educacion</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certificaciones</a></li>
                     
                 </ul>
             </div>
@@ -95,19 +96,27 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Tecnico de Redes</h3>
-                            <div class="subheading mb-3">Superredes</div>
-                            <p>Intalacion de internet inalambrio y soporte tecnico en la zona rural de pereira y sus alrededores.</p>
+                            <h3 class="mb-0">Asesor Atencion al cliente</h3>
+                            <div class="subheading mb-3">Call center Emergia</div>
+                            <p>Atenciòn cliente Español en plicacion de factura y servicos contratados de servicios hogar.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Junio 2017 - Agosto 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Enero 2016 - Marzo 2016</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Tecnico de Redes</h3>
-                            <div class="subheading mb-3">Superredes</div>
-                            <p>Intalacion de internet inalambrio y soporte tecnico en la zona rural de pereira y sus alrededores.</p>
+                            <h3 class="mb-0">Tecnico de Campo</h3>
+                            <div class="subheading mb-3">Mangalink</div>
+                            <p>Mantenimiento preventivo de equipos de un programa gubernamental llamado caldas vive diguital.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Junio 2017 - Agosto 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Agosto 2014 - Diciembre 2014</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Asesor bilingüe</h3>
+                            <div class="subheading mb-3">Emergia </div>
+                            <p>Atenciòn cliente Americano en plicacion de factura y servicos contratados de servicios hogar.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Marzo 2012 - Julio 2013</span></div>
                     </div>
                 </div>
             </section>
@@ -157,39 +166,23 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-5">Habilidades</h2>
+                    <div class="subheading mb-3">Lenguajes de Programacion y Herramientas</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Mantenimiento de equipos de computo
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Realizar pruebas de aplicaciones
                         </li>
                     </ul>
                 </div>
@@ -198,54 +191,27 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">Intereses</h2>
+                    <p>Me apasionan los sistemas ya que es la aplicaion de los medios tecnologicos que mueven y conectan al mundo hoy en dia, cada dia em gusta aprender de ello y ver como evolivonan para mejorar las tecnologias existentes.</p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Certificaciones</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Modulo Mantenimiento de Equipos de Computo - CONFAMILIARES
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            Curso nivel avanzado para trabajo seguro en alturas, ASTAR COLOMBIA TRAINING S.A.S
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            Curso nivel reentrenamiento para trabajo seguro en alturas, CONFENALCO, 
                         </li>
                     </ul>
                 </div>
