--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         Puerta del Sol, Manizales, Caldas, Cel (310) 416-8970 ·
                         <a href="mailto:juansebas192@gmail.com">juansebas192@gmail.com</a>
                     </div>
-                    <p class="lead mb-5"> Tengo experience en el area de sistemas.</p>
+                    <p class="lead mb-5"> Tengo experiencia en el area de sistemas.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/juan-sebastian-salazar-garcia-589548233" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/juansalazar92/"target="_blank"><i class="fab fa-github"></i></a>
@@ -90,7 +90,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asesor Atencion al cliente</h3>
                             <div class="subheading mb-3">Call center Emergia</div>
-                            <p>Atenciòn cliente Colombiano en plicacion de factura y servicos contratados de telefonia celular.</p>
+                            <p>Atenciòn cliente Colombiano en explicacion de factura y servicos contratados de telefonia celular.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Enero 2017</span></div>
                     </div>
@@ -98,7 +98,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asesor Atencion al cliente</h3>
                             <div class="subheading mb-3">Call center Emergia</div>
-                            <p>Atenciòn cliente Español en plicacion de factura y servicos contratados de servicios hogar.</p>
+                            <p>Atenciòn cliente Español en explicacion de factura y servicos contratados de servicios hogar.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Enero 2016 - Marzo 2016</span></div>
                     </div>
@@ -114,7 +114,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asesor bilingüe</h3>
                             <div class="subheading mb-3">Emergia </div>
-                            <p>Atenciòn cliente Americano en plicacion de factura y servicos contratados de servicios hogar.</p>
+                            <p>Atenciòn cliente Americano en explicacion de factura y servicos contratados de servicios hogar.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Marzo 2012 - Julio 2013</span></div>
                     </div>
