--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asesor bilingüe</h3>
                             <div class="subheading mb-3">Emergia </div>
-                            <p>Atenciòn cliente Americano en explicacion de factura y servicos contratados de servicios hogar.</p>
+                            <p>Atenciòn cliente Americano en exgiplicacion de factura y servicos contratados de servicios hogar.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Marzo 2012 - Julio 2013</span></div>
                     </div>
