--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Tecnico Print</h3>
                             <div class="subheading mb-3">Carvajal Tecnologia y Servicios</div>
-                            <p>Estar pendiente del funcionameinto y operatividad de las impreosras instaladas en todas las cedes, realizar inventario de insumos, realizar reportes de contadores y reporte de factura mensual.</p>
+                            <p>Estar pendiente del funcionameinto y operatividad de las impresoras instaladas en todas las cedes, realizar inventario de insumos, realizar reportes de contadores y reporte de factura mensual.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> Septiembre 2019 - Presente</span></div>
                     </div>
@@ -82,7 +82,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Tecnico de Redes</h3>
                             <div class="subheading mb-3">Superredes</div>
-                            <p>Intalacion de internet inalambrio y soporte tecnico en la zona rural de pereira y sus alrededores.</p>
+                            <p>Intalacion de internet inalambrio y soporte tecnico en la zona rural de Pereira y sus alrededores.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junio 2017 - Agosto 2018</span></div>
                     </div>
@@ -90,7 +90,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asesor Atencion al cliente</h3>
                             <div class="subheading mb-3">Call center Emergia</div>
-                            <p>Atenciòn cliente Colombiano en explicacion de factura y servicos contratados de telefonia celular.</p>
+                            <p>Atenciòn cliente Colombiano en explicacion de factura y servicios contratados de telefonia celular.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Enero 2017</span></div>
                     </div>
@@ -98,7 +98,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asesor Atencion al cliente</h3>
                             <div class="subheading mb-3">Call center Emergia</div>
-                            <p>Atenciòn cliente Español en explicacion de factura y servicos contratados de servicios hogar.</p>
+                            <p>Atenciòn cliente Español en explicacion de factura y servicios contratados de servicios hogar.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Enero 2016 - Marzo 2016</span></div>
                     </div>
@@ -114,7 +114,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Asesor bilingüe</h3>
                             <div class="subheading mb-3">Emergia </div>
-                            <p>Atenciòn cliente Americano en exgiplicacion de factura y servicos contratados de servicios hogar.</p>
+                            <p>Atenciòn cliente Americano en exgiplicacion de factura y servicios contratados de servicios hogar.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Marzo 2012 - Julio 2013</span></div>
                     </div>
@@ -192,7 +192,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
-                    <p>Me apasionan los sistemas ya que es la aplicaion de los medios tecnologicos que mueven y conectan al mundo hoy en dia, cada dia em gusta aprender de ello y ver como evolivonan para mejorar las tecnologias existentes.</p>
+                    <p>Me apasionan los sistemas ya que es la aplicacion de los medios tecnologicos que mueven y conectan al mundo hoy en dia, cada dia me gusta aprender de ello y ver como evolucionan para mejorar las tecnologias existentes.</p>
                 </div>
             </section>
             <hr class="m-0" />
